--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Sync with upstream
         run: |
-          git remote add upstream <https://github.com/ufrisk/LeechCore.git>
+          git remote add upstream https://github.com/ufrisk/LeechCore.git
           git fetch upstream
           git checkout master
           git merge upstream/master -m "Sync with upstream"
